.k8s/devs/adminer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: monitoring
  labels:
    environment: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: monitoring
  labels:
    environment: monitoring
spec:
  selector:
    app: adminer
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30080
