.k8s/devs/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: monitoring
  labels:
    environment: monitoring
spec:
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: mariadb:10.3
          imagePullPolicy: Always
          ports:
            - containerPort: 3306
---

apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: monitoring
  labels:
    environment: monitoring
spec:
  selector:
    app: database
  ports:
    - port: 3306
