.k8s/devs/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: monitoring
  labels:
    environment: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:management
          imagePullPolicy: Always
          ports:
            - containerPort: 5672

---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: monitoring
  labels:
    environment: monitoring
spec:
  selector:
    app: rabbitmq
  type: NodePort
  ports:
    - protocol: TCP
      port: 5672
      name: rabbit

    - protocol: TCP
      port: 15672
      nodePort: 30072
      name: management
